force-app/main/default/objects/netsuite_conn__Contract_Item__c/netsuite_conn__Contract_Item__c.object-meta.xml
<CustomObject>
    <label>Contract Item</label>
    <nameField>
        <displayFormat>CI-{000000}</displayFormat>
        <label>Contract Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>