force-app/main/default/objects/netsuite_conn__Contract_Item__c/fields/netsuite_conn__Bill_To_Customer__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Bill_To_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Items</relationshipLabel>
    <relationshipName>Contract_Items</relationshipName>
    <type>Lookup</type>
</CustomField>