force-app/main/default/objects/netsuite_conn__Contract_Item__c/fields/netsuite_conn__Bill_To_Customer_Discount__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Bill_To_Customer_Discount__c</fullName>
    <label>Bill To Customer Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>