force-app/main/default/objects/netsuite_conn__Contract_Item__c/fields/netsuite_conn__Contract__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Items</relationshipLabel>
    <relationshipName>Contract_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>