force-app/main/default/objects/netsuite_conn__Contract_Item__c/fields/netsuite_conn__Contract_Item_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Contract_Item_Order_Type__c</fullName>
    <label>Contract Item Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract - New</fullName>
            </value>
            <value>
                <fullName>Contract - Upsell</fullName>
            </value>
            <value>
                <fullName>Contract - Renewal</fullName>
            </value>
            <value>
                <fullName>Contract - Downsell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>