force-app/main/default/objects/netsuite_conn__Contract_Item__c/fields/netsuite_conn__Contract_Item_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Contract_Item_Start_Date__c</fullName>
    <label>Contract Item Start Date</label>
    <type>Date</type>
</CustomField>