force-app/main/default/objects/netsuite_conn__Contract_Item__c/fields/netsuite_conn__End_User__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__End_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End User</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Items (End User)</relationshipLabel>
    <relationshipName>Contract_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>