force-app/main/default/objects/netsuite_conn__Contract_Item__c/fields/netsuite_conn__Item_Category__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Item_Category__c</fullName>
    <label>Item Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>License - Perpetual</fullName>
            </value>
            <value>
                <fullName>License - Term</fullName>
            </value>
            <value>
                <fullName>Maintenance - New</fullName>
            </value>
            <value>
                <fullName>Maintenance - Renewal</fullName>
            </value>
            <value>
                <fullName>Support - New</fullName>
            </value>
            <value>
                <fullName>Support - Renewal</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Parent Item</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Services - Perpetual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>