force-app/main/default/objects/netsuite_conn__Contract_Item__c/fields/netsuite_conn__Renew_With__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Renew_With__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renew With</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contract Items (Renew With)</relationshipLabel>
    <relationshipName>Contract_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>