force-app/main/default/objects/netsuite_conn__Contract_Item__c/fields/netsuite_conn__Renewal_Processed_On__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Renewal_Processed_On__c</fullName>
    <label>Renewal Processed On</label>
    <type>Date</type>
</CustomField>